--- a/ui.conf
+++ b/ui.conf
@@ -1,8 +1,11 @@
-#DocumentArea {
+#document_area {
   background: #fff;
   background-image: url(:/ui/grid);
   background-repeat: repeat-xy;
 }
-#EditableLabel:hover {
+#label_node:hover {
   background: #eee;
+}
+#link_node {
+  /* border: 1px solid #000; */
 }
