Link draw masking

--- a/ui.conf
+++ b/ui.conf
@@ -6,6 +6,6 @@
 #label_node:hover {
   background: #eee;
 }
-#link_node {
-  /* border: 1px solid #000; */
+#link_node:hover {
+  background: #999;
 }
